--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="main">
+        <div class="cursor"></div>
+        <h1>Custom Cursor</h1>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
